<resources>
    <string name="app_name">Socket</string>
    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="action_refresh">Refresh</string>
    <string name="blank"> </string>
    <!-- Intro 화면 Strings -->
    <string name="logo">SOCIAL GET</string>
    <string name="login_btn">로그인</string>

    <!--가입하기 화면 strings -->
    <string name="invitation_code_hint">초대장번호</string>
    <string name="register_label">가입하기</string>
    <string name="user_name">이름</string>
    <string name="user_name_hint">이름</string>
    <string name="user_id">아이디</string>
    <string name="user_id_hint">아이디 (영문)</string>
    <string name="user_email">이메일</string>
    <string name="user_email_hint">이메일</string>
    <string name="user_pwd">비밀번호</string>
    <string name="user_pwd_hint">비밀번호 (6자리 이상)</string>
    <string name="user_pwd_check_hint">비밀번호 확인</string>
    <string name="register_btn">가입하기</string>
    <string name="register_condition">가입과 동시에 동의하신 것으로 간주됩니다</string>
    <string name="register_condition_1">이용약관 및</string>
    <string name="register_privacy">개인정보 취급방침</string>

    <!--로그인 화면 strings -->
    <string name="login_id_hint">아이디</string>
    <string name="login_pwd_hint">비밀번호</string>
    <string name="login_forget_pwd">비밀번호를 잊어버리셨나요?</string>

    <!--my get (archive) 화면 string -->
    <string name="myget_title">MY GET</string>
    <string name="setting_btn">SETTING</string>
    <string name="add_btn">ADD</string>
    <string name="archive_row_num_get"> MarkIn\'</string>
    <string name="archive_row_num_comment"> Comments</string>
    <string name="add_bookmark_url_hint">URL</string>
    <string name="add_bookmark_tag_hint">TAG</string>
    <string name="add_bookmark_confirm">확인</string>
    <string-array name="privacy_array">
        <item>전체공개</item>
        <item>비공개</item>
    </string-array>

    <!-- friends 화면 -->
    <string name="invitation_user">사용하기</string>
    <string name="invitation">함께 모을 친구 초대하기</string>
    <string name="accept_btn">추가</string>
    <string name="waiting_btn">대기 중</string>
    <string name="friend_title">FRIENDS</string>
    <string name="search_btn">SEARCH</string>
    <string name="search_cancel_btn">취소</string>

    <string name="close_btn">CLOSE</string>

    <!--Comment-->

    <string name="complete_btn">입력</string>
    <string name="comment_hint">댓글을 입력하세요</string>

    <string name="home_title">HOME</string>
    <string name="title_activity_setting">Setting</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!--Setting-->
    <string name="setting_pwd_reset">비밀번호 재설정</string>
    <string name="setting_feedback">피드백</string>
    <string name="setting_blog">SOCKET 블로그</string>
    <string name="setting_privacy_regulation">개인정보 처리방침</string>
    <string name="setting_app_regulation">이용약관</string>

    <!--Intro-->
    <string name="intro_btn">초대장으로 입장하기</string>
    <string name="intro_desc">초대장 기반으로 운영되는 \n소셜북마킹서비스입니다</string>
    <string name="intro_invitation_request"><u>초대장이 없으신가요?</u></string>
    <string name="intro_invitation_login"><u>로그인하기</u></string>

    <!--Invitation Send-->
    <string name="invitation_send_current_code">내가 가진 MarkIn\' 초대장 : </string>
    <string name="invitation_send_desc">초대장은 딱 10장만 지급됩니다.\n\n내가 모을 콘텐츠에\n관심을 기울이고 즐거워 할 친구에게만\n초대장을 보내주세요.</string>
    <string name="invitation_receiver">받을 사람</string>
    <string name="invitation_sms_message">음악, 읽을 만한 글들을 함께 공유하고자 합니다. 앱스토어에서 Socket을 다운받고, 초대번호로 가입하세요!</string>
    <string name="invitation_code">초대장 번호 : </string>
    <string name="invitation_app">앱 설치하기 : app.mark.in</string>
    <string name="invitation_note">카카오톡이 없는 친구에게는 초대장 번호만 알려주시면 됩니다</string>
    <string name="kakao_send_btn">카카오톡으로 보내기</string>

    <!--Add bookmark Dialog-->
    <string name="popup_add">담기</string>
    <string name="popup_cancel">취소</string>
    <string name="popup_hint">어떤 점이 좋았는지 친구들에게도 얘기해주세요.</string>
    <string name="bookmark_duplicate">이미 북마킹 하였습니다.</string>

    <!-- KaKao Talk-->
    <string name="kakao_app_key">2b01b8aa193b65aff676ab8f63e9b5e7</string>
    <string name="kakao_scheme">kakao2b01b8aa193b65aff676ab8f63e9b5e7</string>
    <string name="kakaolink_host">kakaolink</string>


    <!-- Discover-->
    <string name="show_more">더 보기</string>

    <!-- Archive-->
    <string name="change_to_privacy">비공개 설정되었습니다.</string>
    <string name="change_to_public">전체공개 설정되었습니다.</string>
    <string name="empty_archive_msg_1">Add Your First Socket!</string>
    <string name="empty_archive_msg_2">마음에 드는 컨텐츠를 모으면\n친구들에게도 추천됩니다.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



    <!--Category-->
    <string name="category_title">CATEGORY</string>

    <!--Invitation-->
    <string name="invitation_title">소켓은 친구 초대로 가입되는 서비스입니다</string>
    <string name="invitation_desc">내가 모은 콘텐츠를 함께 나누고 모을 친구에게 \n 아래의 코드번호를 전달해주세요</string>
    <string name="invitation_content">{user_name}({user_id}) 님이 음악, 읽을 만한 글들을 함께 공유하고자 합니다. 앱스토어에서 Socket을 다운받고, 초대번호로 가입하세요!\n\n\n초대장번호 : {code}</string>

    <!--Add Friend Dialog-->
    <string name="add_friend_noti">알림</string>
    <string name="add_friend_decline">거절</string>
    <string name="add_friend_accept">승낙</string>
    <string name="add_friend_desc">{user_name} 님과 친구를 맺고, {user_name} 님이 모은 콘텐츠를 받아보시겠습니까?</string>

    <!--Noti Friend Dialog-->
    <string name="noti_friend_desc">{user_name} 님과 친구가 되었습니다. 서로가 발견한 콘텐츠를 이제 함께 볼 수 있습니다</string>
</resources>
