<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/register_edit_text_selector"
        android:id="@+id/invitation_code_edit"
        android:hint="@string/invitation_code_hint"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/register_edit_color_selector"
        android:textSize="13.91sp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/user_name_hint"
        android:background="@drawable/register_edit_text_selector"
        android:id="@+id/user_name_edit"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:textColor="@color/register_edit_color_selector"
        android:textSize="13.91sp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_id_hint"
        android:id="@+id/user_id_edit"
        android:background="@drawable/register_edit_text_selector"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:textColor="@color/register_edit_color_selector"
        android:textSize="13.91sp"
         />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/user_email_hint"
        android:background="@drawable/register_edit_text_selector"
        android:id="@+id/user_email_edit"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:textColor="@color/register_edit_color_selector"
        android:textSize="13.91sp"
         />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/user_pwd_hint"
        android:id="@+id/user_pwd_edit"
        android:background="@drawable/register_edit_text_selector"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:textColor="@color/register_edit_color_selector"
        android:textSize="13.91sp"
        />
    <TextView
        android:id="@+id/register_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_condition"
        android:textColor="@color/main_color"
        android:textSize="9.86sp"
        android:layout_marginTop="32.33dp"
        android:drawableLeft="@drawable/register_info_icon"
        android:drawablePadding="4dp"/>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_btn"
        android:background="@drawable/register_btn_selector"

        />
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:text="@string/register_btn"
         android:id="@+id/register_tv"
         android:textSize="16.23sp"
         android:textColor="@color/white"
         android:gravity="center"
         android:layout_gravity="center" />
    </FrameLayout>
    <TextView
        android:id="@+id/register_condition_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main_color"
        android:text="@string/register_condition_1"
        android:layout_marginTop="50dp"
        android:textSize="11.01sp"/>

</LinearLayout>
