<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/main_color"
        android:id="@+id/title_bar">
        <TextView
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/register_label"/>

    </LinearLayout>


    <TextView
        android:id="@+id/user_id_label"
        android:text="@string/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_id_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/user_pwd_label"
        android:text="@string/user_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_pwd_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_id_hint"
        android:id="@+id/user_id_edit"
        android:layout_below="@+id/title_bar"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/user_pwd_label"
        android:layout_alignRight="@+id/title_bar"
        android:layout_alignEnd="@+id/title_bar" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/user_pwd_hint"
        android:id="@+id/user_pwd_edit"
        android:layout_below="@+id/user_id_edit"
        android:layout_toRightOf="@+id/user_pwd_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:id="@+id/login_btn"
        android:layout_below="@+id/user_pwd_edit"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_btn"/>



</RelativeLayout>