<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    android:gravity="center">
    <LinearLayout
        android:layout_width="337.3dp"
        android:layout_height="241.3dp"
        android:background="@drawable/pop_background"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pop_header"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_friend_noti"
                android:id="@+id/add_friend_noti_txt"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                />

        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/add_friend_desc_tv"
            android:text="@string/noti_friend_desc"
            android:paddingLeft="28.3dp"
            android:paddingRight="28.3dp"
            android:paddingTop="18dp"
            android:textColor="@color/charcol_text_color_66"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <FrameLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/add_friend_accept_btn_selector"
                    android:id="@+id/add_friend_accept_btn"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_friend_accept"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:id="@+id/add_friend_accept_tv"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>