<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/back_btn"
            android:src="@drawable/back_btn"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/setting_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_box_1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:weightSum="4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/setting_id"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="ID"
                android:textSize="14.67sp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setting_line_seperator"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/setting_email"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="EMAIL"
                android:textSize="14.67sp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setting_line_seperator"
                android:layout_gravity="center_horizontal"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/setting_invitation_btn"
                android:src="@drawable/shadow_green_btn_selector"
                android:background="@color/transparent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="초대장 : 10장"
                android:id="@+id/setting_invitation_tv"
                android:textColor="@color/black"
                android:textSize="14.67sp"

                android:paddingLeft="20dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/enter_btn"
                android:layout_gravity="right|center_vertical"
                android:paddingRight="20dp"/>
            </FrameLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setting_line_seperator"
                android:layout_gravity="center_horizontal"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                >
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/setting_pwd_change_btn"
                android:src="@drawable/shadow_green_btn_selector"
                android:background="@color/transparent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/setting_pwd_reset"
                android:textSize="14.67sp"
                android:paddingLeft="20dp"/>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/enter_btn"
                 android:layout_gravity="right|center_vertical"
                 android:paddingRight="20dp"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/setting_box_1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="2"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/setting_feedback_btn"
                    android:src="@drawable/shadow_green_btn_selector"
                    android:background="@color/transparent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/setting_feedback"
                    android:textColor="@color/black"
                    android:textSize="14.67sp"

                    android:paddingLeft="20dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/enter_btn"
                    android:layout_gravity="right|center_vertical"
                    android:paddingRight="20dp"/>
            </FrameLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setting_line_seperator"
                android:layout_gravity="center_horizontal"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/setting_blog_btn"
                    android:src="@drawable/shadow_green_btn_selector"
                    android:background="@color/transparent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:text="@string/setting_blog"
                    android:textSize="14.67sp"
                    android:paddingLeft="20dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/enter_btn"
                    android:layout_gravity="right|center_vertical"
                    android:paddingRight="20dp"/>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/setting_box_1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="2"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/setting_privacy_regulation_btn"
                    android:src="@drawable/shadow_green_btn_selector"
                    android:background="@color/transparent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/setting_privacy_regulation"
                    android:textColor="@color/black"
                    android:textSize="14.67sp"

                    android:paddingLeft="20dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/enter_btn"
                    android:layout_gravity="right|center_vertical"
                    android:paddingRight="20dp"/>
            </FrameLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setting_line_seperator"
                android:layout_gravity="center_horizontal"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/setting_regulation_btn"
                    android:src="@drawable/shadow_green_btn_selector"
                    android:background="@color/transparent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:text="@string/setting_app_regulation"
                    android:textSize="14.67sp"
                    android:paddingLeft="20dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/enter_btn"
                    android:layout_gravity="right|center_vertical"
                    android:paddingRight="20dp"/>
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
